--- a/public/content/styles/main.css
+++ b/public/content/styles/main.css
@@ -99,6 +99,49 @@ li {list-style: none;}
  
  #chatlist .unreadIcon {height: 14px; margin: 11px 3px; display: inline-block; width: 15px; background-color: #1569aa; border-radius: 50%;}
 
+/* Chatroom Page */
+.chatroomPage {background-color: white; margin: 0px;}   
+.chatroomPage .moreBtn {width: 100%; text-align: center;} 
+.chatroomPage .moreBtn span {cursor: pointer;}
+.chatroomPage__main {max-width: 950px; margin: 0 auto; position: relative;}
+.chatroomPage h3 {margin-top: 15px;}
+.chatroom #form {max-width: 950px; margin: 0 auto;}
+.chatroomInfo { padding: 15px; border-bottom: 1px solid #EFEFEF}
+.chatroomInfo div {float: left;}
+.chatroomInfo::after {content: ''; display: table; clear: both;}
+.chatroomInfo .goBack {padding: 0px 15px 0px 0px; border-right: 1px solid black; cursor: pointer;}
+.chatroomInfo .goBack img{ height: 35px;}
+.chatroomInfo #icon {height: 35px; width: 35px; border-radius: 50%; float: right;}
+.chatroomInfo #header {font-size: 24px; text-align: center; width: calc(100% - 120px);}
+.chatroomInfo .chatroomName {width: calc(100% - 51px);}
+.chatroomInfo .chatroomName * {float: left; margin: 0 auto;}
+.chatroomInfo .chatroomName::after {content: ''; display: table; clear: both;}
+.chatroomInfo .moreOption {display: none;}
+.chatroom {min-height: 80vh; background-image: url('/content/images/55a44e59618507debb99d95fc16b659a.png');}
+
+/* Message */
+#messages .message { background: white; padding:20px; border-radius: 10px; display: inline-block; max-width: 42%;}
+#messages .messageImg {max-width: 100%;}
+#messages .messageImg img{max-height: 240px;}
+#messages li::after {clear: both; display: table; content: '';}
+#messages .message .content {word-break: break-word;}
+#messages .right {background: greenyellow; float: right;}
+
+/* Chat form */
+#form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
+#input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
+#input:focus { outline: none; }
+#form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; cursor: pointer;}
+
+/* Image preview */
+#imagePreview {display: none; position: absolute; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.6);}
+.imagePreview__content {margin-top: 25vh; text-align: center; background-color: white;}
+.imagePreview__content img { max-height: 50%; max-width: 100%; }
+.previewClose {cursor: pointer;}
+
+#messages { list-style-type: none; margin: 0; margin-bottom: 48px; padding: 0; }
+#messages > li { padding: 0.5rem 1rem; }
+
 @media only screen and (max-width: 700px){
     .loginPage__form div { margin: 0px; padding: 0px;}
 }
