--- a/public/content/styles/main.css
+++ b/public/content/styles/main.css
@@ -63,7 +63,7 @@ li {list-style: none;}
 .loginPage__footer .right {width: 60%;}
 
 /* CHATLIST page */
-.chatlistPage { height: 100vh }
+.chatlistPage { height: 100vh; position: relative; }
 
 /* chatlist body */
 .chatlistPage__main {background-color: white; max-width: 1280px; margin: 0 auto; height: 100%;}
