--- a/public/content/styles/main.css
+++ b/public/content/styles/main.css
@@ -151,7 +151,7 @@ li {list-style: none;}
 
 /* Image preview */
 #imagePreview {display: none; position: absolute; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.6);}
-.imagePreview__content {margin-top: 25vh; text-align: center; background-color: white;}
+.imagePreview__content {margin-top: 50%; transform: translateY(-50%); text-align: center; background-color: white;}
 .imagePreview__content img { max-height: 50%; max-width: 100%; }
 .previewClose {cursor: pointer;}
 
