--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -22,45 +22,13 @@
 
 /* Common */
 * {font-family: Inter, sans-serif; margin: 0px;}
-body {background-color: #1c98f7; margin: 0 auto; max-width: 1280px; }  
+body {background-color: white;/*#0478d1;*/ margin: 0 auto; max-width: 1280px; }  
 input { height: 35px; border-radius: 10px; border-color: #d2d2d7; }
 input:focus { outline: none; border-color: #1c98f7; box-shadow: 0 0 0 2px #1c98f7;}
 form p {margin: 20px 0px 2px 0px; font-size: 14px;}
 ul {padding: 0px; margin-right: 55px;}
 li {list-style: none;}
 .errorMsg {font-size: 12px; color:brown;}
-
-/* LOGIN page*/
-/* Login page header */
-.loginPage__header { background-color: white; padding : 30px 0px 55px 20px;  }
-.loginPage__header div {animation-name: icon; animation-duration: 1.5s;}
-.loginPage__header * {float: left;}
-.loginPage__header::after {  content: ""; clear: both; display: table; }
-.loginPage__header h1 { margin : 0 0 0 15px; line-height: 55px;}
-.loginPage__header .chatIcon {height: 55px; }
-
-/* Login page main content */
-.loginPage__form { max-width: 950px; margin: 0 auto; margin-top: -25px; padding: 55px 15px; background-color: #f6fafb; border-radius: 10px; }
-.loginPage__form div { width: 420px; margin: 0 auto;}
-.loginPage__form input { width: 350px;}
-.loginPage__form .loginBtn { width: 350px; margin: 0px; padding: 5px 0px; height: 35px; position: relative; margin-top: 15px;}
-.loginPage__form .button {width: calc(50% - 25px); margin-right: 15px; font-size: 14px; border-color: #1c98f7; border-radius: 10px; background-color: #1c98f7; color : white; line-height: 35px; cursor: pointer; box-shadow: 1px 1px 10px black;}
-.loginPage__form .button:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}
-
-/* Login page login form */
-.loginPage__form-login { margin-top: 25px; padding: 0px 120px; animation-name: fadeInTop; animation-duration: 1s;}
-
-/* Login page signup form */
-.loginPage__form-signup {display: none; animation-name: fadeInTop; animation-duration: 1s;}
-
-/* Login page footer */
-.loginPage__footer {margin-top: 50px; background-color: #000b21; width: 100%; padding: 35px 0px;}
-.loginPage__footer .container {width: 82%; margin: 0 auto;}
-.loginPage__footer .container * {color: white;}
-.loginPage__footer .container div{float: left;}
-.loginPage__footer .container::after {content: ''; clear: both; display: table;}
-.loginPage__footer .left {width: 40%;}
-.loginPage__footer .right {width: 60%;}
 
 /* CHATLIST page */
 .chatlistPage { height: 100vh; position: relative; }
