--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -29,6 +29,7 @@ form p {margin: 20px 0px 2px 0px; font-size: 14px;}
 ul {padding: 0px; margin-right: 55px;}
 li {list-style: none;}
 .errorMsg {font-size: 12px; color:brown;}
+.column { margin: 0px 0px 8px 0px; }
 
 /* CHATLIST page */
 .chatlistPage { height: 100vh; position: relative; }
