--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,14 +10,14 @@
     100% { transform: translateY(0px);  opacity: 100; }
 }
 
-@keyframes customBTN {
-    0% { transform: scale(1);}
-    100% { transform: scale(1.05); box-shadow: 3px 3px 10px black;}
+@keyframes fadeInBottom {
+    0% { transform: translateY(15px); opacity: 0; }
+    100% { transform: translateY(0px);  opacity: 100; }
 }
 
-@keyframes changeColorBlue {
-    0% { background-color: #1c98f7;}
-    100% {background-color: #187bc7;}
+@keyframes customBTN {
+    0% { transform: scale(1);}
+    100% { transform: scale(1.02); box-shadow: 0px 1px 3px black;}
 }
 
 /* Common */
@@ -30,6 +30,52 @@ ul {padding: 0px; margin-right: 55px;}
 li {list-style: none;}
 .errorMsg {font-size: 12px; color:brown;}
 .column { margin: 0px 0px 8px 0px; }
+input[type='text'],textarea {font-size:1em;}
+
+/* Common HEADER*/
+.header { background-color: white; padding : 30px 0px 30px 20px;  border-bottom: 1px solid #ddd; }
+.header div {animation-name: icon; animation-duration: 1.5s;}
+.header * {float: left;}
+.header a { color : black; }
+.header::after {  content: ""; clear: both; display: table; }
+.header h1 { margin : 0 0 0 15px; line-height: 55px;}
+.header .appIcon {height: 55px; }
+
+/* LOGIN page*/
+.loginForm { margin: 45px auto; max-width: 500px; border-radius: 20px; overflow: hidden; box-shadow: 0px 3px 5px 6px #ddd;}
+.loginForm__form { max-width: 950px; margin: 0 auto; background-color: #f6fafb; }
+.loginForm__form .form { width: fit-content; margin: 0 auto; padding: 35px 0 35px 0;}
+.loginForm__form input { width: 350px;}
+.loginForm__form .loginBtn { width: 350px; margin: 0px; padding: 5px 0px; height: 35px; position: relative; margin-top: 15px;}
+.loginForm__form .button {width: 100%; margin-right: 15px; font-size: 14px; border-color: #0478d1; border-radius: 10px; background-color: #0478d1; color : white; line-height: 35px; cursor: pointer; box-shadow: 0px 0px 2px black;}
+.loginForm__form .button:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}     
+.loginForm__changeForm { width: 100%; }
+.loginForm__changeForm::after { content: ''; display: table; clear: both; }
+.loginForm__changeForm .tab { width: 50%; font-weight: bold; float: left; text-align: center; padding: 8px 0px; background-color: white; border-bottom: 3px solid white; cursor: pointer; }
+.loginForm__changeForm .active { background-color: #f6fafb; border-bottom: 3px solid #0478d1; }
+.loginForm__changeForm .tab:first-child {width: calc(50% - 1px); border-right: 1px solid #ddd}
+
+/* Login page login form */
+.loginForm__form-login { animation-name: fadeInBottom; animation-duration: 1s;}
+
+/* Login page signup form */
+.loginForm__form-signup {display: none; animation-name: fadeInBottom; animation-duration: 1s;}
+
+/* Forget password form */        
+.forgetPwd { padding: 30px 0px 0px 0px; text-align: right; }
+.forgetPwd span { font-size: 14px; text-decoration: underline; cursor: pointer; }
+#loginResetForm { display: none; animation-name: fadeInTop; animation-duration: 1s; }
+#loginResetForm .msg {font-size: 12px; padding: 3px 0px;}
+
+/* RESET page*/
+.resetForm { margin: 45px auto; max-width: 500px; border-radius: 20px; overflow: hidden; box-shadow: 0px 3px 5px 6px #ddd;}
+.resetForm__form { max-width: 950px; margin: 0 auto; background-color: #f6fafb; animation-name: fadeInBottom; animation-duration: 1s;}
+.resetForm__form .form { width: fit-content; margin: 0 auto; padding: 35px 0 35px 0;}
+.resetForm__form input { width: 350px;}
+.resetForm__form .resetBtn { width: 350px; margin: 0px; padding: 5px 0px; height: 35px; position: relative; margin-top: 15px;}
+.resetForm__form .button {width: 100%; margin-right: 15px; font-size: 14px; border-color: #0478d1; border-radius: 10px; background-color: #0478d1; color : white; line-height: 35px; cursor: pointer; box-shadow: 0px 0px 2px black;}
+.resetForm__form .button:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}     
+#confirmText {font-size: 12px; color: red; }
 
 /* CHATLIST page */
 .chatlistPage { height: 100vh; position: relative; }
@@ -129,6 +175,15 @@ li {list-style: none;}
 
 #messages { list-style-type: none; margin: 0; margin-bottom: 150px; padding: 0; }
 #messages > li { padding: 0.5rem 1rem; }
+
+/*FOOTER*/
+.footer {margin-top: 50px; background-color: #000b21; width: 100%; padding: 35px 0px;}
+.footer .container {width: 82%; margin: 0 auto;}
+.footer .container * {color: white;}
+.footer .container div{float: left;}
+.footer .container::after {content: ''; clear: both; display: table;}
+.footer .left {width: 40%;}
+.footer .right {width: 60%;}
 
 @media only screen and (max-width: 700px){
     .loginPage__form div { margin: 0px; padding: 0px;}
