--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -107,7 +107,8 @@ input[type='text'],textarea {font-size:1em;}
 #messages .messageImg img{max-height: 240px;}
 #messages li::after {clear: both; display: table; content: '';}
 #messages .message .content {word-break: break-word;}
-#messages .right {background: greenyellow; float: right;}
+#messages .right {background: rgb(191, 248, 105); float: right;}
+#messages .left {border: 1px solid #ddd; float: left;}
 
 /* Chat form */
 #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
