--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -20,6 +20,38 @@
     100% { transform: scale(1.02); box-shadow: 0px 1px 3px black;}
 }
 
+@keyframes enterFromTop {
+    0% {
+        margin-top: -500%;
+    }
+    100% {
+        margin-top: 0%;
+    }
+}
+
+@keyframes expendFromTop {
+    0% {
+        opacity: 0;
+        margin-top: -50%;
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        margin-top: 0%;
+    }
+}
+
+@keyframes closeFromBottom {
+    0% {
+        margin-top: 0%;
+    }
+    100% {
+        margin-top: -500%;
+    }
+}
+
 /* Common */
 * {font-family: Inter, sans-serif; margin: 0px;}
 body {background-color: white;/*#0478d1;*/ margin: 0 auto; max-width: 1280px; }  
@@ -31,6 +63,35 @@ li {list-style: none;}
 .errorMsg {font-size: 12px; color:brown;}
 .column { margin: 0px 0px 8px 0px; }
 input[type='text'],textarea {font-size:1em;}
+.enterFromTop {animation-name: enterFromTop; animation-duration: 0.8s; animation-fill-mode: forwards; }
+.closeFromBottom {animation-name: closeFromBottom; animation-duration: 3s; animation-fill-mode: forwards; }
+.expendFromTop {animation-name: expendFromTop; animation-duration: 0.5s; animation-fill-mode: forwards; }
+.arrow {
+    border: solid black;
+    border-width: 0 7px 7px 0;
+    display: inline-block;
+    padding: 10px;
+}
+
+.arrow_right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+.arrow_left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+
+.arrow_up {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+.arrow_down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
 
 /* Common HEADER*/
 .header { background-color: white; padding : 30px 0px 30px 20px;  border-bottom: 1px solid #ddd; }
@@ -77,44 +138,102 @@ input[type='text'],textarea {font-size:1em;}
 .resetForm__form .button:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}     
 #confirmText {font-size: 12px; color: red; }
 
+/* Chat page base settings */
+.chatPage { height: 95vh; position: relative; background-color: #183a55; overflow: hidden; }
+.chatPage #chatlist, .chatPage #chatroom { float: left; padding: 0; margin: 0; }
+.chatPage main { position: relative; }
+.chatPage main::after{ content: ''; display: table; clear: both; }
+.chatPage #chatlist { min-width: 230px; max-width: 280px; border-right: 1px solid #ddd; border-left: 1px solid #ddd;}
+.chatPage #chatroom { min-width: calc(100% - 233px); max-width: calc(100% - 283px); }
 
- 
-/* Chatroom Page */
-.chatroomPage {background-color: white; margin: 0px; overflow: hidden;}   
-.chatroomPage .moreBtn {width: 100%; text-align: center;} 
-.chatroomPage .moreBtn span {cursor: pointer;}
-.chatroomPage h3 {margin-top: 15px;}
-.chatroom #messages {position: relative;}
-.chatroom #form, .chatroomPage {max-width: 950px; margin: 0 auto;}
-.chatroomInfo { padding: 15px; border-bottom: 1px solid #EFEFEF;}
-.chatroomInfo div {float: left;}
-.chatroomInfo::after {content: ''; display: table; clear: both;}
-.chatroomInfo .goBack {padding: 0px 15px 0px 0px; border-right: 1px solid black; cursor: pointer;}
-.chatroomInfo .goBack img{ height: 35px;}
-.chatroomInfo #icon {height: 35px; width: 35px; border-radius: 50%; float: right;}
-.chatroomInfo #header {font-size: 24px; text-align: center; width: calc(100% - 120px);}
-.chatroomInfo .chatroomName {width: calc(100% - 51px);}
-.chatroomInfo .chatroomName * {float: left; margin: 0 auto;}
-.chatroomInfo .chatroomName::after {content: ''; display: table; clear: both;}
-.chatroomInfo .moreOption {display: none;}
-.chatroomPage .chatroom {overflow-y: scroll; height: 100vh; background-image: url('/content/images/55a44e59618507debb99d95fc16b659a.png');}
-.chatroomPage #emojiPicker{position: absolute; bottom: 15px; width: 100%}
-.chatroomPage #emojiPicker emoji-picker {margin: 0 auto;}
+/* Chat page user info bar */
+.chatlist__user {padding: 5px 15px; border-bottom: 1px solid #EFEFEF;}
+.chatlist__user .icon {height: 55px; width: 55px; border-radius: 50%;}
+.chatlist__user .username { font-size: 22px; font-weight: 500; vertical-align: top;  line-height: 55px; width: calc(100% - 113px); text-align:center; display: inline-block;}
+.chatlist__user .more { cursor: pointer; float: right; padding-right: 8px;}
+.chatlist__user svg:hover { transform: scale(1.15); }
 
-/* Message */
-#messages .message { background: white; padding:20px; border-radius: 10px; display: inline-block; max-width: 42%;}
-#messages .messageImg {max-width: 100%;}
-#messages .messageImg img{max-height: 240px;}
-#messages li::after {clear: both; display: table; content: '';}
-#messages .message .content {word-break: break-word;}
-#messages .right {background: rgb(191, 248, 105); float: right;}
-#messages .left {border: 1px solid #ddd; float: left;}
+/* More option div */
+#optionContainer { height: 100vh; margin-top: -500%; overflow: hidden; position: absolute; inset: 0; background-color: rgba(0, 0, 0, 0.7); z-index: 999; }
+#optionContainer .closeArrow { position: absolute; box-shadow: 6px 4px 10px black; cursor: pointer; bottom: 0; left: 50%; transform: translate(-50%, 50%); background-color: #0478d1; border-radius: 50%; height: 55px; width: 55px;}
+#optionContainer .arrow {margin: 13px 18px; border: solid white; border-width:  0 5px 5px 0; padding: 7px;}
 
-/* Chat form */
-#form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-#input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-#input:focus { outline: none; }
-#form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; cursor: pointer;}
+.optionContainer__content { height: fit-content; border-radius: 5px; box-shadow: 6px 4px 10px black; width: fit-content; position: absolute; inset: 0; margin: auto; padding: 25px; background-color: white; }
+.optionContainer__content .profile__title { padding: 25px 10px; background-color: #0478d1; border-radius: 10px; }
+.optionContainer__content .profile__title h3 { font-size: 1.8em; color: white;}
+.optionContainer__content .profile__icon { padding: 15px; position: relative; }
+.optionContainer__content .profile__icon img {margin-left: 50%; border-radius: 50%; transform: translateX(-50%); height: 280px; width: 280px; cursor: pointer; }
+.optionContainer__content .profile__username { background-color: rgb(243, 243, 243); padding: 15px; border-radius: 10px; }
+.optionContainer__content .profile__username h2 { font-size: 18px; }
+.optionContainer__content .profile__username .username { display: inline-block; margin: 10px 0px; font-size: 18px;}
+.optionContainer__content .profile__username .remarks { font-size: 12px; }
+.optionContainer__content .profile__email { background-color: rgb(243, 243, 243); padding: 15px; margin-top: 15px; border-radius: 10px; }
+.optionContainer__content .profile__email h2 { font-size: 18px; }
+.optionContainer__content .profile__email .email { display: inline-block; margin: 10px 0px; font-size: 18px;}
+.logout { width: 350px; margin: 15px auto; height: 35px; position: relative; }
+.logoutBtn {width: 100%; margin-right: 15px; font-size: 14px; border-color: #0478d1; border-radius: 10px; background-color: #0478d1; color : white; line-height: 35px; cursor: pointer; box-shadow: 0px 0px 2px black;}
+.logoutBtn:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}     
+
+#updateName { display: none; }
+.updateNameBtn { border: none; border-radius: 50%; background-color: rgb(243, 243, 243); cursor: pointer; }
+.updateNameBtn:hover { background-color: #ddd; }
+
+#fileUpload { display: none; }
+.overlay_icon { position: absolute; display: none; height: 280px; background-color: rgba(0,0,0, 0.5); top: 15px; left: 50%; transform: translateX(-50%); width: 280px;  border-radius: 50%; cursor: pointer; }
+.overlay_icon p { position: absolute; inset: 0; color: white; height: fit-content; width: fit-content; margin: auto; }
+.optionContainer__content .profile__icon img:hover + div { display: block; }
+
+/* Create New Chatroom */
+.chatlist__newchat { padding: 10px; background-color: #0478d1; overflow: hidden; border-radius: 10px; }
+.chatlist__newchat h3 { color: white; cursor: pointer;}
+.newchatForm form {display: none;}
+.newchatForm input{ min-width: 200px; }
+#createChat { color: white; }
+.createChatBtn {min-width: 200px; margin-top: 20px; font-size: 14px; border-radius: 10px; background-color: white; line-height: 35px; cursor: pointer;}
+.createChatBtn:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}     
+.createChatArrow { float: right; padding-right: 5px; margin-top: -2px; }
+.createChatArrow .arrow {border: solid white; border-width: 0 4px 4px 0; padding: 5px; }
+
+/* Show Joined Chatrooms */
+.chatlist__chatrooms {background-color: white; max-height: calc(100vh - 112px); height: 100vh; overflow: auto;}
+#chatlist__chatrooms_list {margin-right: 0;}
+#chatlist__chatrooms_list .chatroom {padding: 15px; border-bottom: 1px solid #ddd;}
+#chatlist__chatrooms_list .chatroom:hover {background-color: #ddd;}
+#chatlist__chatrooms_list .chatroom .chatroom_icon {height: 35px; border-radius: 50%; margin-right: 15px;}
+#chatlist__chatrooms_list .chatroom div {float: left;}
+#createChat .errorMsg {color: white; margin-top: 5px;}
+#initUpdateName { cursor: pointer; margin-left: 10px; }
+#updateName .errMsg { display: none; font-size: 12px; }
+
+#chatlist {padding: 0px 15px; background-color: #f5f5f5; margin: 0px;}
+#chatlist li {cursor: pointer;}          
+#chatlist .chatroom .right{width: calc(100% - 50px);}
+#chatlist .chatroom .halfWidthRight {width: calc(100% - 75px);}
+#chatlist .chatroom .message, #chatlist .chatroom .timestamp {font-size: 14px; color: #5a5a5a;}
+#chatlist .chatroom .timestamp {float: right;}
+#chatlist .chatroom::after {clear: both; display: table; content: "";}
+#chatlist span {vertical-align: top;}
+#chatlist .roomName {display: inline-block; font-size: 14px; font-weight: bold;}
+
+/* Message body */
+#noMoreMsg, #newMsgLine {background-color: rgba(0, 0, 0, 0.6); padding: 5px; text-align: center; width: 100%; color: white; display: none;}
+.message {margin: 5px 0px;}
+
+#chatOptionContainer { display: none; }
+#chatroom .chatroom_header { background-color: #f5f5f5; padding: 5px 15px;}
+#chatroom .chatroom_header div { float: left; }
+#chatroom .chatroom_header .chatroomMore { float: right; }
+#chatroom .chatroom_header::after { display: table; content: ''; clear: both; }
+#chatroom_icon { height: 45px; width: 45px; border-radius: 50%; padding: 5px;}
+
+.chatroom__content { background-color: white;  position: relative; }               
+.chatroom__content #messages { margin: 0px; height: calc(100vh - 120px); padding-bottom: 51px; overflow: auto; }
+.chatroom__content__form { position: absolute!important; width: 100%; }
+#chatName { font-size: 22px; vertical-align: top; display: inline-block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 15px; }
+#messages__read, #messages__unread {margin: 5px 8px;}
+
+/* EMOJI picker */
+#emojiPicker { position: absolute; bottom: 55px; left: 50%; transform: translateX(-50%);}
 
 /* Image preview */
 #imagePreview {display: none; position: absolute; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, 0.6);}
