--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -232,6 +232,17 @@ input[type='text'],textarea {font-size:1em;}
 #chatName { font-size: 22px; vertical-align: top; display: inline-block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 15px; }
 #messages__read, #messages__unread {margin: 5px 8px;}
 
+#messages .message { width: fit-content; padding: 15px; display: block; border-radius: 15px; }
+#messages li::after {content: ''; clear: both; display: table; }
+#messages .right { background-color: rgb(176, 235, 88); float: right;}
+#messages .left  { background-color:rgb(231, 231, 231); }
+
+/* Chat form */
+#form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
+#input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
+#input:focus { outline: none; }
+#form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; cursor: pointer;}
+
 /* EMOJI picker */
 #emojiPicker { position: absolute; bottom: 55px; left: 50%; transform: translateX(-50%);}
 
