--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -144,7 +144,7 @@ input[type='text'],textarea {font-size:1em;}
 .chatPage main { position: relative; }
 .chatPage main::after{ content: ''; display: table; clear: both; }
 .chatPage #chatlist { min-width: 230px; max-width: 280px; border-right: 1px solid #ddd; border-left: 1px solid #ddd;}
-.chatPage #chatroom { min-width: calc(100% - 233px); max-width: calc(100% - 283px); }
+.chatPage #chatroom { min-width: calc(100% - 246px); max-width: calc(100% - 283px); }
 
 /* Chat page user info bar */
 .chatlist__user {padding: 5px 15px; border-bottom: 1px solid #EFEFEF;}
@@ -220,6 +220,7 @@ input[type='text'],textarea {font-size:1em;}
 /* Message body */
 #noMoreMsg, #newMsgLine {background-color: rgba(0, 0, 0, 0.6); padding: 5px; text-align: center; width: 100%; color: white; display: none;}
 .message {margin: 5px 0px;}
+.message img {width: 250px;}
 
 #chatOptionContainer { display: none; }
 #chatroom .chatroom_header { background-color: #f5f5f5; padding: 5px 15px;}
