--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -144,7 +144,7 @@ input[type='text'],textarea {font-size:1em;}
 .chatPage main { position: relative; }
 .chatPage main::after{ content: ''; display: table; clear: both; }
 .chatPage #chatlist { min-width: 230px; max-width: 280px; border-right: 1px solid #ddd; border-left: 1px solid #ddd;}
-.chatPage #chatroom { min-width: calc(100% - 246px); max-width: calc(100% - 283px); }
+.chatPage #chatroom { min-width: calc(100% - 233px); max-width: calc(100% - 283px); }
 
 /* Chat page user info bar */
 .chatlist__user {padding: 5px 15px; border-bottom: 1px solid #EFEFEF;}
@@ -222,10 +222,23 @@ input[type='text'],textarea {font-size:1em;}
 .message {margin: 5px 0px;}
 .message img {width: 250px;}
 
-#chatOptionContainer { display: none; }
+#chatOptionContainer { display: none; position: absolute; height: 100vh; width: 100%; z-index: 995; background-color: rgba(0, 0, 0, 0.6);}
+.chatOptionContainer__content {position: absolute; padding: 25px; border-radius: 5px; width: fit-content; height: fit-content; inset: 0; margin: auto; transform: translateX(-25%); background-color: white;}
+.chatOp__title { padding: 25px 10px; background-color: #0478d1; border-radius: 10px; }
+.chatOp__title h3 { font-size: 1.8em; color: white;}
+.chatOp__icon { padding: 15px; position: relative; }
+.chatOp__icon img {margin-left: 50%; border-radius: 50%; transform: translateX(-50%); height: 280px; width: 280px; cursor: pointer; }
+.chatOp__icon img:hover + div { display: block; }
+.leaveBtn {width: 100%; margin-right: 15px; font-size: 14px; border-color: #0478d1; border-radius: 10px; background-color: #0478d1; color : white; line-height: 35px; cursor: pointer; box-shadow: 0px 0px 2px black;}
+.leaveBtn:hover {animation-name: customBTN; animation-duration: 0.5s; animation-fill-mode: forwards;}     
+.chatOp__close {text-align: right; display: block; margin: 5px 0px; cursor: pointer;}
+#initUpdateChatName {cursor: pointer; }
+#updateChatName {display: none;}
+#updateChatName .errMsg{display: none;}
+
 #chatroom .chatroom_header { background-color: #f5f5f5; padding: 5px 15px;}
 #chatroom .chatroom_header div { float: left; }
-#chatroom .chatroom_header .chatroomMore { float: right; }
+#chatroom .chatroom_header .chatroomMore { float: right; cursor: pointer; }
 #chatroom .chatroom_header::after { display: table; content: ''; clear: both; }
 #chatroom_icon { height: 45px; width: 45px; border-radius: 50%; padding: 5px;}
 
