--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -301,9 +301,14 @@ input[type='text'],textarea {font-size:1em;}
 #messages li::after {content: ''; clear: both; display: table; }
 #messages .right { background-color: rgb(176, 235, 88); float: right;}
 #messages .left  { background-color:rgb(231, 231, 231); }
+#quotePanel { display: none; position: absolute; bottom: 50px; right: 0; width: 100%; background-color: white; box-sizing: border-box; padding: 15px;}
+#quotePanel .replyContent {background-color: rgb(176, 235, 88); border-radius: 10px;}
+#quotePanel .close {float: right; cursor: pointer;}
+#quotePanel .sender { padding: 10px; border-bottom: 1px solid black; }
 
 #showTyping { display: none; position: absolute; background-color: rgba(0,0,0, 0.5); width: 100%; top: 0px; color: white; padding: 5px 0px;}
 
+.message .quote { border-bottom: 1px solid black;}
 /* Chat form */
 #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
 #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
